--- a/SistemaMCE.WEB/packages.config
+++ b/SistemaMCE.WEB/packages.config
@@ -35,6 +35,8 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="MySql.Data" version="6.10.8" targetFramework="net452" />
+  <package id="MySql.Data.Entity" version="6.10.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
   <package id="popper.js" version="1.14.0" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
