--- a/SistemaMCE.WEB/Web.config
+++ b/SistemaMCE.WEB/Web.config
@@ -84,6 +84,13 @@
       </provider></providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MCEContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;Initial Catalog=BDSistemaMCE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MCEContext" connectionString="data source=localhost;port=3306;Initial Catalog=BDSistemaMCE;User ID=root;Password=" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL"
+           type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.10.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
