--- a/SistemaMCE.DATA/SistemaMCE.DATA.vbproj
+++ b/SistemaMCE.DATA/SistemaMCE.DATA.vbproj
@@ -98,11 +98,16 @@
       <DependentUpon>201904092119433_esAdmin_agregado.vb</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201904092119433_esAdmin_agregado.vb" />
+    <Compile Include="Migrations\201904120504244_TipoModificadoAEnum.Designer.vb">
+      <DependentUpon>201904120504244_TipoModificadoAEnum.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904120504244_TipoModificadoAEnum.vb" />
     <Compile Include="Migrations\Configuration.vb" />
     <Compile Include="Model\Lectura.vb" />
     <Compile Include="Model\MCEContext.vb" />
     <Compile Include="Model\Nodo.vb" />
     <Compile Include="Model\Sector.vb" />
+    <Compile Include="Model\Tipo.vb" />
     <Compile Include="Model\Usuario.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -129,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201904092119433_esAdmin_agregado.resx">
       <DependentUpon>201904092119433_esAdmin_agregado.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904120504244_TipoModificadoAEnum.resx">
+      <DependentUpon>201904120504244_TipoModificadoAEnum.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
