HotFix_1: Modificada base de datos, borrada migraciones innecesarias, agregada una sola migracion, que incluye modificacion a tabla lectura, con atributos correctos y ModelBuilder modificado para que trabaje en 10 decimales. Vistas y Scripts de ConsumoActual y historico creado.

--- a/SistemaMCE.WEB/SistemaMCE.WEB.vbproj
+++ b/SistemaMCE.WEB/SistemaMCE.WEB.vbproj
@@ -760,6 +760,8 @@
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\app\Home\home.ts" />
     <TypeScriptCompile Include="Scripts\app\Login\login.ts" />
+    <TypeScriptCompile Include="Scripts\app\Nodos\nodoactual.ts" />
+    <TypeScriptCompile Include="Scripts\app\Nodos\nodohistorico.ts" />
     <TypeScriptCompile Include="Scripts\app\Nodos\nodos.ts" />
     <TypeScriptCompile Include="Scripts\app\Sectores\sectores.ts" />
     <TypeScriptCompile Include="Scripts\app\Usuarios\usuarios.ts" />
