--- a/SistemaMCE.WEB/packages.config
+++ b/SistemaMCE.WEB/packages.config
@@ -4,6 +4,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="cldrjs" version="0.4.4" targetFramework="net452" />
+  <package id="DevExtreme.AspNet.Data" version="2.2.0" targetFramework="net452" />
   <package id="devextreme.TypeScript.DefinitelyTyped" version="2.9.4" targetFramework="net452" />
   <package id="DevExtreme.Web" version="18.2.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
