--- a/SistemaMCE.WEB/Web.config
+++ b/SistemaMCE.WEB/Web.config
@@ -84,7 +84,7 @@
       </provider></providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MCEContext" connectionString="data source=localhost;port=3306;Initial Catalog=BDSistemaMCE;User ID=root;Password=" providerName="MySql.Data.MySqlClient" />
+    <add name="MCEContext" connectionString="data source=localhost;port=3306;Initial Catalog=BDSistemaMCE;User ID=root;Password=;Convert Zero Datetime=True" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
