--- a/SistemaMCE.DATA/App.config
+++ b/SistemaMCE.DATA/App.config
@@ -17,7 +17,7 @@
       </provider></providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MCEContext" connectionString="data source=192.168.0.3;port=3306;Initial Catalog=BDSistemaMCE;User ID=admin;Password=admin" providerName="MySql.Data.MySqlClient" />
+    <add name="MCEContext" connectionString="data source=localhost;port=3306;Initial Catalog=BDSistemaMCE;User ID=admin;Password=admin" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
